--- a/app/src/main/res/layout/cardview_checklist.xml
+++ b/app/src/main/res/layout/cardview_checklist.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="7dp">
 
-</LinearLayout>
+    <CheckBox
+        android:id="@+id/checklist_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"/>
+
+    <EditText
+        android:id="@+id/checklist_data"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:textSize="24sp"
+        android:background="#fff"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/checklist_checkbox" />
+
+    <ImageButton
+        android:id="@+id/checklist_delete"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_alignParentEnd="true"/>
+
+</RelativeLayout>
