--- a/app/src/main/res/layout/fragment_take_checklists.xml
+++ b/app/src/main/res/layout/fragment_take_checklists.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.sarthak.notes.fragments.TakeChecklistsFragment">
 
-    <Button
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/checklistList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:clipToPadding="false" />
 
 </FrameLayout>
