--- a/app/src/main/res/layout/cardview_checklist_reminders.xml
+++ b/app/src/main/res/layout/cardview_checklist_reminders.xml
@@ -11,7 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/notesColor"
+            android:background="@color/checklistRemindersColor"
             android:orientation="vertical">
 
             <TextView
@@ -24,12 +24,22 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp" />
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/cardChecklistList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:clipToPadding="false" />
+
             <TextView
-                android:id="@+id/cardBodyTv"
+                android:id="@+id/cardReminderTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:padding="10dp"/>
+                android:textSize="12sp"
+                android:padding="4dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="#e2e2e2" />
 
         </LinearLayout>
 
