--- a/app/src/main/res/layout/cardview_note_reminders.xml
+++ b/app/src/main/res/layout/cardview_note_reminders.xml
@@ -11,6 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/noteRemindersColor"
             android:orientation="vertical">
 
             <TextView
@@ -34,7 +35,8 @@
                 android:id="@+id/cardReminderTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:textSize="12sp"
+                android:padding="4dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="#e2e2e2" />
