--- a/app/src/main/res/layout/fragment_take_checklist_reminders.xml
+++ b/app/src/main/res/layout/fragment_take_checklist_reminders.xml
@@ -1,13 +1,58 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sarthak.notes.fragments.TakeChecklistRemindersFragment">
+    android:background="#fff"
+    tools:context="com.example.sarthak.notes.fragments.TakeChecklistsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/checklistsTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:hint="Title"
+                android:textSize="24sp"
+                android:textColorHint="@color/colorDividerLine"
+                android:textColor="@color/colorPrimaryText"
+                android:inputType="textCapSentences|textMultiLine"
+                android:layout_marginTop="25dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="10dp"
+                android:maxLength="100"
+                android:maxLines="4" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/checklistList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/checklistsTitle"
+                android:paddingTop="15dp"
+                android:paddingStart="25dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="10dp"
+                android:clipToPadding="false" />
+
+            <Button
+                android:id="@+id/buttonAlarm"
+                android:text="Tomorrow, 8:00 am"
+                android:textColor="@color/colorPrimaryText"
+                android:textAllCaps="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/checklistList"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="25dp" />
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
