--- a/app/src/main/res/layout/cardview_checklist_reminders.xml
+++ b/app/src/main/res/layout/cardview_checklist_reminders.xml
@@ -6,30 +6,31 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="@dimen/cardview_margin">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@color/checklistRemindersColor"
-            android:orientation="vertical">
+            android:layout_height="@dimen/cardview_height"
+            android:background="@color/checklistRemindersColor">
 
             <TextView
                 android:id="@+id/cardTitleTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hello"
                 android:textSize="32sp"
-                android:paddingTop="10dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp" />
+                android:layout_alignParentTop="true"
+                android:paddingTop="@dimen/cardview_padding"
+                android:paddingStart="@dimen/cardview_padding"
+                android:paddingEnd="@dimen/cardview_padding" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/cardChecklistList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:clipToPadding="false" />
+                android:padding="@dimen/cardview_padding"
+                android:clipToPadding="false"
+                android:layout_below="@+id/cardTitleTv"
+                android:layout_above="@+id/cardReminderTv"/>
 
             <TextView
                 android:id="@+id/cardReminderTv"
@@ -37,11 +38,12 @@
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:padding="4dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="#e2e2e2" />
+                android:layout_marginStart="@dimen/cardview_padding"
+                android:layout_marginBottom="@dimen/cardview_padding"
+                android:background="#e2e2e2"
+                android:layout_alignParentBottom="true" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
