--- a/app/src/main/res/layout/cardview_checklists.xml
+++ b/app/src/main/res/layout/cardview_checklists.xml
@@ -6,11 +6,11 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="@dimen/cardview_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="@dimen/cardview_height"
             android:background="@color/checklistsColor"
             android:orientation="vertical">
 
@@ -19,15 +19,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="32sp"
-                android:paddingTop="10dp"
+                android:paddingTop="@dimen/cardview_padding"
                 android:paddingStart="8dp"
-                android:paddingEnd="10dp" />
+                android:paddingEnd="@dimen/cardview_padding" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/cardChecklistList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
+                android:padding="@dimen/cardview_margin"
                 android:clipToPadding="false" />
 
         </LinearLayout>
