--- a/app/src/main/res/layout/cardview_notes.xml
+++ b/app/src/main/res/layout/cardview_notes.xml
@@ -6,11 +6,11 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="@dimen/cardview_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="@dimen/cardview_height"
             android:background="@color/notesColor"
             android:orientation="vertical">
 
@@ -18,18 +18,17 @@
                 android:id="@+id/cardTitleTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hello"
                 android:textSize="32sp"
-                android:paddingTop="10dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp" />
+                android:paddingTop="@dimen/cardview_padding"
+                android:paddingStart="@dimen/cardview_padding"
+                android:paddingEnd="@dimen/cardview_padding" />
 
             <TextView
                 android:id="@+id/cardBodyTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:padding="10dp"/>
+                android:padding="@dimen/cardview_padding" />
 
         </LinearLayout>
 
