--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -23,33 +23,24 @@
 
         <TextView
             android:id="@+id/textViewNotes"
-            android:text="Take a Note..."
+            android:text="@string/take_a_note"
             android:textSize="24sp"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/home_bottom_bar_size"
             android:layout_toStartOf="@+id/button_checkList" />
 
         <ImageButton
             android:id="@+id/button_checkList"
-            android:src="@android:drawable/ic_menu_camera"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="4dp"
+            android:src="@drawable/checklist"
+            android:layout_width="@dimen/home_bottom_bar_size"
+            android:layout_height="@dimen/home_bottom_bar_size"
+            android:scaleType="fitXY"
+            android:padding="8dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp"
             android:background="#fff"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/buttonMessage" />
-
-        <ImageButton
-            android:id="@+id/buttonMessage"
-            android:src="@android:drawable/ic_menu_send"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="4dp"
-            android:layout_marginEnd="5dp"
-            android:background="#fff"
             android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
