--- a/app/src/main/res/layout/dialog_configure_reminder.xml
+++ b/app/src/main/res/layout/dialog_configure_reminder.xml
@@ -9,9 +9,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="23dp"
-        android:text="Select day :" />
+        android:layout_marginStart="@dimen/date_time_dialog_margin"
+        android:layout_marginTop="@dimen/date_time_dialog_margin"
+        android:text="@string/dialog_select_day" />
 
     <Spinner
         android:id="@+id/daySpinner"
@@ -20,7 +20,7 @@
         android:layout_alignStart="@+id/textView"
         android:layout_below="@+id/textView"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="23dp" />
+        android:layout_marginEnd="@dimen/date_time_dialog_margin" />
 
     <TextView
         android:id="@+id/textView2"
@@ -29,7 +29,7 @@
         android:layout_alignStart="@+id/daySpinner"
         android:layout_below="@+id/daySpinner"
         android:layout_marginTop="20dp"
-        android:text="Select Time :" />
+        android:text="@string/dialog_select_time" />
 
     <Spinner
         android:id="@+id/timeSpinner"
@@ -38,6 +38,7 @@
         android:layout_alignStart="@+id/textView2"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="23dp" />
+        android:layout_marginEnd="@dimen/date_time_dialog_margin"
+        android:layout_marginBottom="@dimen/date_time_dialog_margin" />
+
 </RelativeLayout>
