--- a/app/src/main/res/layout/fragment_take_checklists.xml
+++ b/app/src/main/res/layout/fragment_take_checklists.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
-                android:hint="Title"
+                android:hint="@string/title_hint"
                 android:textSize="24sp"
                 android:textColorHint="@color/colorDividerLine"
                 android:textColor="@color/colorPrimaryText"
