--- a/app/src/main/res/layout/fragment_take_note_reminders.xml
+++ b/app/src/main/res/layout/fragment_take_note_reminders.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
-                android:hint="Title"
+                android:hint="@string/title_hint"
                 android:textSize="24sp"
                 android:textColorHint="@color/colorDividerLine"
                 android:textColor="@color/colorPrimaryText"
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
-                android:hint="Note"
+                android:hint="@string/body_hint"
                 android:textSize="18sp"
                 android:textColorHint="@color/colorDividerLine"
                 android:textColor="@color/colorSecondaryText"
@@ -55,7 +55,7 @@
 
             <Button
                 android:id="@+id/buttonAlarm"
-                android:text="Tomorrow, 8:00 am"
+                android:text="@string/default_time"
                 android:textColor="@color/colorPrimaryText"
                 android:textAllCaps="false"
                 android:layout_width="wrap_content"
