--- a/app/src/main/res/layout/fragment_take_notes.xml
+++ b/app/src/main/res/layout/fragment_take_notes.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
-                android:hint="Title"
+                android:hint="@string/title_hint"
                 android:textSize="24sp"
                 android:textColorHint="@color/colorDividerLine"
                 android:textColor="@color/colorPrimaryText"
@@ -40,12 +40,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
-                android:hint="Note"
+                android:hint="@string/body_hint"
                 android:textSize="18sp"
                 android:textColorHint="@color/colorDividerLine"
                 android:textColor="@color/colorSecondaryText"
                 android:inputType="textCapSentences|textMultiLine"
-
                 android:layout_below="@+id/notesTitle"
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="25dp"
