--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -13,14 +13,14 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/nav_profile_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_width="@dimen/account_image_size"
+        android:layout_height="@dimen/account_image_size" />
 
     <TextView
         android:id="@+id/nav_profile_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingTop="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
