--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,9 +4,21 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
 
     <!-- Dimens for floating action button animation -->
     <dimen name="standard_55">55dp</dimen>
     <dimen name="standard_105">105dp</dimen>
+
+    <dimen name="fab_size">45dp</dimen>
+    <dimen name="fab_margin">21dp</dimen>
+
+    <dimen name="cardview_margin">5dp</dimen>
+    <dimen name="cardview_height">200dp</dimen>
+    <dimen name="cardview_padding">10dp</dimen>
+
+    <dimen name="home_bottom_bar_size">40dp</dimen>
+    <dimen name="date_time_dialog_margin">23dp</dimen>
+
+    <dimen name="account_image_size">50dp</dimen>
+    <dimen name="remove_button_size">20dp</dimen>
 </resources>
