--- a/app/src/main/res/layout/cardview_notes.xml
+++ b/app/src/main/res/layout/cardview_notes.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/cardTitleTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="32sp"
+                android:textSize="@dimen/cardview_title_text_size"
                 android:paddingTop="@dimen/cardview_padding"
                 android:paddingStart="@dimen/cardview_padding"
                 android:paddingEnd="@dimen/cardview_padding" />
@@ -27,7 +27,7 @@
                 android:id="@+id/cardBodyTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="@dimen/cardview_body_text_size"
                 android:padding="@dimen/cardview_padding" />
 
         </LinearLayout>
