--- a/app/src/main/res/layout/fragment_take_note_reminders.xml
+++ b/app/src/main/res/layout/fragment_take_note_reminders.xml
@@ -24,14 +24,14 @@
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
                 android:hint="@string/title_hint"
-                android:textSize="24sp"
+                android:textSize="@dimen/cardview_title_text_size"
                 android:textColorHint="@color/colorDividerLine"
                 android:textColor="@color/colorPrimaryText"
                 android:inputType="textCapSentences|textMultiLine"
                 android:layout_below="@+id/notesImage"
-                android:layout_marginTop="25dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginTop="@dimen/fragment_title_margin"
+                android:layout_marginStart="@dimen/fragment_title_margin"
+                android:layout_marginEnd="@dimen/fragment_title_margin"
                 android:maxLength="100"
                 android:maxLines="4" />
 
@@ -41,14 +41,14 @@
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
                 android:hint="@string/body_hint"
-                android:textSize="18sp"
+                android:textSize="@dimen/cardview_title_text_size"
                 android:textColorHint="@color/colorDividerLine"
                 android:textColor="@color/colorSecondaryText"
                 android:inputType="textCapSentences|textMultiLine"
                 android:layout_below="@+id/noteRemindersTitle"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginTop="@dimen/fragment_body_margin"
+                android:layout_marginStart="@dimen/fragment_title_margin"
+                android:layout_marginEnd="@dimen/fragment_title_margin"
                 android:layout_marginBottom="10dp"
                 android:maxLength="2000"
                 android:maxLines="75" />
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/noteRemindersBody"
                 android:layout_marginTop="5dp"
-                android:layout_marginStart="25dp" />
+                android:layout_marginStart="@dimen/fragment_title_margin" />
 
         </RelativeLayout>
 
