--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,17 +8,22 @@
     <!-- Dimens for floating action button animation -->
     <dimen name="standard_55">55dp</dimen>
     <dimen name="standard_105">105dp</dimen>
-
     <dimen name="fab_size">45dp</dimen>
     <dimen name="fab_margin">21dp</dimen>
 
+    <!-- Dimens for cardview padding and margins -->
     <dimen name="cardview_margin">5dp</dimen>
     <dimen name="cardview_height">200dp</dimen>
     <dimen name="cardview_padding">10dp</dimen>
+    <dimen name="cardview_title_text_size">24sp</dimen>
+    <dimen name="cardview_reminder_text_size">12sp</dimen>
+    <dimen name="cardview_body_text_size">18sp</dimen>
 
+    <!-- Other dimens -->
     <dimen name="home_bottom_bar_size">40dp</dimen>
     <dimen name="date_time_dialog_margin">23dp</dimen>
-
     <dimen name="account_image_size">50dp</dimen>
     <dimen name="remove_button_size">20dp</dimen>
+    <dimen name="fragment_title_margin">25dp</dimen>
+    <dimen name="fragment_body_margin">15dp</dimen>
 </resources>
